increase timeout to 60000 in configuration

--- a/pom.xml
+++ b/pom.xml
@@ -295,6 +295,9 @@
 						<goals>
 							<goal>start</goal>
 						</goals>
+						<configuration>
+							<timeout>60000</timeout>
+						</configuration>
 					</execution>
 					<execution>
 						<id>stop-container</id>
