--- a/pom.xml
+++ b/pom.xml
@@ -203,6 +203,12 @@
 		</dependency>
 		<dependency>
 			<groupId>org.webjars</groupId>
+			<artifactId>modernizr</artifactId>
+			<version>2.7.1</version>
+			<scope>runtime</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.webjars</groupId>
 			<artifactId>datatables</artifactId>
 			<version>1.10.2</version>
 			<scope>runtime</scope>
