--- a/src/main/resources/resource.properties
+++ b/src/main/resources/resource.properties
@@ -2,7 +2,12 @@
 resource.bootstrap.css=/webjars/bootstrap/3.2.0/css/bootstrap.min.css
 resource.bootstrap.js=/webjars/bootstrap/3.2.0/js/bootstrap.min.js
 
+resource.fontawesome.css=/webjars/font-awesome/4.1.0/css/font-awesome.min.css
+
+resource.bootswatch.css=/webjars/bootswatch-flatly/3.2.0/css/bootstrap-theme.min.css
+
 resource.jquery.js=/webjars/jquery/2.1.1/jquery.min.js
 
-resource.html5shiv.js=/webjars/html5shiv/3.7.2/html5shiv.min.js
+resource.modernizr.js=/webjars/modernizr/2.7.1/modernizr.min.js
+
 resource.respond.js=/webjars/respond/1.4.2/src/respond.js
