--- a/pom.xml
+++ b/pom.xml
@@ -184,12 +184,6 @@
 		</dependency>
 		<dependency>
 			<groupId>org.webjars</groupId>
-			<artifactId>bootstrap</artifactId>
-			<version>3.2.0</version>
-			<scope>runtime</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.webjars</groupId>
 			<artifactId>jquery</artifactId>
 			<version>2.1.1</version>
 			<scope>runtime</scope>
@@ -304,12 +298,18 @@
 							<url>http://archive.apache.org/dist/tomcat/tomcat-8/v8.0.9/bin/apache-tomcat-8.0.9.zip</url>
 						</zipUrlInstaller>
 					</container>
+					<configuration>
+						<properties>
+							<cargo.tomcat.ajp.port>58009</cargo.tomcat.ajp.port>
+							<cargo.servlet.port>58080</cargo.servlet.port>
+						</properties>
+					</configuration>
 					<deployables>
 						<deployable>
 							<properties>
 								<context>qir</context>
 							</properties>
-							<pingURL>http://localhost:8080/qir/login</pingURL>
+							<pingURL>http://localhost:58080/qir/login</pingURL>
 						</deployable>
 					</deployables>
 				</configuration>
