--- a/pom.xml
+++ b/pom.xml
@@ -203,7 +203,7 @@
 		</dependency>
 		<dependency>
 			<groupId>org.webjars</groupId>
-			<artifactId>bootswatch-flatly</artifactId>
+			<artifactId>bootswatch-cerulean</artifactId>
 			<version>3.2.0-1</version>
 			<scope>runtime</scope>
 		</dependency>
