--- a/pom.xml
+++ b/pom.xml
@@ -169,6 +169,24 @@
 			<version>3.3.2</version>
 			<scope>compile</scope>
 		</dependency>
+		<dependency>
+			<groupId>commons-lang</groupId>
+			<artifactId>commons-lang</artifactId>
+			<version>2.6</version>
+			<scope>runtime</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-collections4</artifactId>
+			<version>4.0</version>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>commons-collections</groupId>
+			<artifactId>commons-collections</artifactId>
+			<version>3.2.1</version>
+			<scope>runtime</scope>
+		</dependency>
 
 		<!-- webjars -->
 		<dependency>
@@ -244,12 +262,6 @@
 			<artifactId>elasticsearch</artifactId>
 			<version>1.3.2</version>
 			<scope>compile</scope>
-		</dependency>
-		<dependency>
-			<groupId>commons-lang</groupId>
-			<artifactId>commons-lang</artifactId>
-			<version>2.6</version>
-			<scope>runtime</scope>
 		</dependency>
 	</dependencies>
 	<build>
