user list populated. need to apply jquery-data table to the data.

--- a/src/main/resources/resource.properties
+++ b/src/main/resources/resource.properties
@@ -11,3 +11,6 @@ resource.jquery.js=/webjars/jquery/2.1.1/jquery.min.js
 resource.modernizr.js=/webjars/modernizr/2.7.1/modernizr.min.js
 
 resource.respond.js=/webjars/respond/1.4.2/src/respond.js
+
+resource.datatables.css=/webjars/datatables/1.10.2/css/jquery.dataTables.min.css
+resource.datatables.js=/webjars/datatables/1.10.2/js/jquery.dataTables.min.js
