--- a/pom.xml
+++ b/pom.xml
@@ -243,6 +243,18 @@
 			<version>1.10.2</version>
 			<scope>runtime</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.webjars</groupId>
+			<artifactId>typeaheadjs</artifactId>
+			<version>0.10.4</version>
+			<scope>runtime</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.webjars</groupId>
+			<artifactId>bootstrap-tokenfield</artifactId>
+			<version>0.12.0</version>
+			<scope>runtime</scope>
+		</dependency>
 
 		<!-- Spring Data Elasticsearch -->
 		<dependency>
