--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,12 @@
 			</exclusions>
 		</dependency>
 		<dependency>
+			<groupId>com.googlecode.openpojo</groupId>
+			<artifactId>openpojo</artifactId>
+			<version>0.5.1</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
 			<groupId>org.seleniumhq.selenium</groupId>
 			<artifactId>selenium-java</artifactId>
 			<version>2.42.2</version>
