--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,13 @@
 			<version>1.1.0</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.github.tntim96</groupId>
+			<artifactId>JSCover</artifactId>
+			<version>1.0.13</version>
+			<scope>test</scope>
+		</dependency>
+
 
 		<!-- Spring -->
 		<dependency>
