--- a/src/main/resources/resource.properties
+++ b/src/main/resources/resource.properties
@@ -14,3 +14,6 @@ resource.respond.js=/webjars/respond/1.4.2/src/respond.js
 
 resource.datatables.css=/webjars/datatables/1.10.2/css/jquery.dataTables.min.css
 resource.datatables.js=/webjars/datatables/1.10.2/js/jquery.dataTables.min.js
+
+resource.bootstrap.validator.css=/webjars/bootstrapvalidator/0.5.0/css/bootstrapValidator.min.css
+resource.bootstrap.validator.js=/webjars/bootstrapvalidator/0.5.0/js/bootstrapValidator.min.js
