user delete capability

--- a/src/main/resources/resource.properties
+++ b/src/main/resources/resource.properties
@@ -8,6 +8,11 @@ resource.bootswatch.css=/webjars/bootswatch-cerulean/3.2.0/css/bootstrap.min.css
 
 resource.jquery.js=/webjars/jquery/2.1.1/jquery.min.js
 
+resource.jquery.ui.css=/webjars/jquery-ui-themes/1.11.0/cupertino/jquery-ui.min.css
+resource.jquery.ui.js=/webjars/jquery-ui/1.11.0/jquery-ui.min.js
+
+resource.jquery.form.js=/webjars/jquery-form/3.28.0-2013.02.06-3/jquery.form.js
+
 resource.modernizr.js=/webjars/modernizr/2.7.1/modernizr.min.js
 
 resource.respond.js=/webjars/respond/1.4.2/src/respond.js
@@ -17,3 +22,5 @@ resource.datatables.js=/webjars/datatables/1.10.2/js/jquery.dataTables.min.js
 
 resource.bootstrap.validator.css=/webjars/bootstrapvalidator/0.5.0/css/bootstrapValidator.min.css
 resource.bootstrap.validator.js=/webjars/bootstrapvalidator/0.5.0/js/bootstrapValidator.min.js
+
+resource.mustachejs.js=/webjars/mustachejs/0.8.2/mustache.js
