replaced mustachejs js because hoganjs is smaller.

--- a/src/main/resources/resource.properties
+++ b/src/main/resources/resource.properties
@@ -23,4 +23,4 @@ resource.datatables.js=/webjars/datatables/1.10.2/js/jquery.dataTables.min.js
 resource.bootstrap.validator.css=/webjars/bootstrapvalidator/0.5.0/css/bootstrapValidator.min.css
 resource.bootstrap.validator.js=/webjars/bootstrapvalidator/0.5.0/js/bootstrapValidator.min.js
 
-resource.mustachejs.js=/webjars/mustachejs/0.8.2/mustache.js
+resource.hoganjs.js=/webjars/hoganjs/3.0.2/hogan.min.js
