attempt to fix this: [ERROR] Failed to execute goal org.apache.maven.plugins:maven-surefire-plugin:2.17:test (default-test) on project qir: Unable to parse configuration of mojo org.apache.maven.plugins:maven-surefire-plugin:2.17:test for parameter includes: Cannot assign configuration entry 'includes' with value '**/*-test.html' of type java.lang.String to property of type java.util.List -> [Help 1]

--- a/pom.xml
+++ b/pom.xml
@@ -429,7 +429,7 @@
 				</executions>
 				<configuration>
 					<baseDir>src</baseDir>
-					<includes>**/*-test.html</includes>
+					<includes>**/*-test.html,**/*-test.html</includes>
 					<outputDir>${project.build.directory}/coverage</outputDir>
 					<noInstrumentPatterns>
 						<pattern>http.+</pattern>
