--- a/pom.xml
+++ b/pom.xml
@@ -372,7 +372,7 @@
 						<containerId>tomcat8x</containerId>
 						<timeout>300000</timeout>
 						<zipUrlInstaller>
-							<url>http://mirrors.sonic.net/apache/tomcat/tomcat-8/v8.0.12/bin/apache-tomcat-8.0.12.zip</url>
+							<url>http://archive.apache.org/dist/tomcat/tomcat-8/v8.0.15/bin/apache-tomcat-8.0.15.zip</url>
 						</zipUrlInstaller>
 					</container>
 					<configuration>
