--- a/pom.xml
+++ b/pom.xml
@@ -11,8 +11,8 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-		<spring.version>5.3.18</spring.version>
-		<spring.security.version>5.3.10.RELEASE</spring.security.version>
+		<spring.version>5.3.20</spring.version>
+		<spring.security.version>5.7.1</spring.security.version>
 		<jackson.version>2.12.6.1</jackson.version>
 		<slf4j.version>1.7.7</slf4j.version>
 		<asm.version>5.0.3</asm.version>
